update agreement endpoints, create agreement controller
